<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/labelImage"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:inputType=""
            android:text="@string/text_email"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:inputType=""
            android:text="@string/text_password"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="37dp"
            android:layout_marginTop="30dp"
            android:shadowColor="@color/white"
            android:text="@string/accept_user_agreement"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button

            android:id="@+id/logButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>

